# DisableMe

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-compile.yml
src/: disable_me.cpp  disable_me.h
